tests/cases/compiler-development/artifact/errors/syntax-recovery-missing-function-close.ari
fn before() -> i64 {
  return 1;
}

fn broken() -> i64 {
  return 10;
fn after() -> i64 {
  return 2;
}
